# Document_reviewer

./: .env.example  .gitignore  README.md  pyproject.toml  review_sop.md
samples/: public_context.md  sample_document.md  sensitive_terms.txt
src/doc_review_agent/: cli.py  prompts.py  reviewer.py
tests/: test_chunking.py  test_config.py  test_document_loader.py  test_report.py
