[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-logic-review-agent"
version = "0.1.0"
description = "OpenAI-compatible multi-agent document logic and inside-knowledge reviewer."
requires-python = ">=3.10"
dependencies = [
  "openai>=1.40.0",
  "keyring>=25.0.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
]

[project.scripts]
doc-review-agent = "doc_review_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
